# SecureNotepad

./: .gitignore  Crypto.py  HTTPClient.py  HTTPServer.py  README.md  Untitled Diagram.xml
CryptoPart/: CMakeLists.txt  belt.c  belt.h  crypto.c  crypto.h  ec.c  ec.h  main.c  mpi.c  mpi.h  serpent.c  serpent.h  try.py  tzi.h  tzi_bign.c  tzi_extra.h  tzi_lib.c  tzi_lib.h  tzi_u128.h  wrap.c
Store/: Addon.py  CAST-128.py  Description.txt  S_blocks.py  gost89.c  gost89.h
